Crash @ bankofamerica.com, University of Vienna https://bugs.webkit.org/show_bug.cgi?id=159439

Reviewed by Saam Barati.

* ftl/FTLLink.cpp:
(JSC::FTL::link): Do check for stack overflow in the arity mismatch thunk
because it can happen. Don't store a CallSiteIndex because we haven't
stored a CodeBlock yet, and our stack frame is not fully constructed,
so it would be an error for any client to try to load this value (and
operationCallArityCheck does not load this value).

* tests/stress/arity-check-ftl-throw.js: Added. New test case for stressing
a stack overflow with arity mismatch. Sadly, after hours of fiddling, I
can't seem to get this to fail in trunk. Still, it's good to have some
more testing in this area.


Canonical link: https://commits.webkit.org/177569@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202838 268f45cc-cd09-0410-ab3c-d52691b4dbfc